# zimple

./: .dockerignore  .env.example  .gitignore  Dockerfile.web  README.md  docker-compose.web.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.web-api.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: integration-smoke.sh
scripts/fixtures/site/: index.html
scripts/fixtures/site/docs/: page.html
src/: App.css  App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: job_manager.rs  main.rs  models.rs  runtime.rs  settings_store.rs
src/components/: AppHeader.tsx  AppSettingsModal.tsx  CaptureSettingsModal.tsx  CreateJobModal.tsx  JobDetailPane.tsx  QueuePane.tsx  ToastStack.tsx
src/hooks/: useCrawlSnapshot.ts  useMediaQuery.ts  useTimeoutInsight.ts
src/lib/: backend.http.test.ts  backend.ts  browserNotifications.ts  captureMetadata.ts  defaults.test.ts  defaults.ts  errorPresentation.test.ts  errorPresentation.ts  presentation.ts  types.ts
web-api/src/: capture-metadata.ts  defaults.ts  index.ts  job-manager.test.ts  job-manager.ts  jobs-store.ts  runtime.test.ts  runtime.ts  server.test.ts  server.ts  settings-store.test.ts  settings-store.ts  types.ts  validation.test.ts  validation.ts
